2009-11-16  Mike Kestner <mkestner@novell.com>

	* configure.in: back off requirement to 2.6.
	* Emveepee.Widgets/ProfileConfiguration.cs: revert ccs option for
	  now since it doesn't help and requires mono trunk.

2009-11-03  Mike Kestner <mkestner@novell.com>

	* Initial checkin of emveepee module.  This module is constructed 
	  of 4 codebases.
	* Emveepee.Decoding/*: refactoring of the decoding library from 
	  mono-tools/Mono.Profiler.
	* Emveepee.Widgets/*:
	* emveepee/*: previously located in mono-tools.  ProfileViews have
	  been consolidated to reduce duplication and ported to the new
	  decoding data structures.  Filtering of both stat and instrumented
	  call chains are now supported in a single StackView. 
	* Emveepee.Addin/*: MD addin which is conditionally built if 
	  monodevelop is installed. Initially included are an ExecutionMode
	  extension with parameterized execution handler and a node builder
	  extension with command handler to support profiling from the
	  project pad context menu.  A DisplayBinding extension for .mprof
	  files is also provided to display profile log files in the document
	  workspace.

2009-10-08  Mike Kestner <mkestner@novell.com>

	* ProfileConfiguration.cs: fix screwup in args construction that was
	causing multi-mode profile setups.

2009-09-03  Mike Kestner <mkestner@novell.com>

	* StartPage.cs: add Quick Sessions section to repeat configs from
	the history.

2009-09-03  Mike Kestner <mkestner@novell.com>

	* History.cs: add recent config support.
	* ProfileConfiguration.cs: new encapsulation for profile params.
	* ProfilerProcess.cs: construct from ProfileConfiguation.
	* ProfileSetupDialog.cs: expose Config prop.  Manage the Execute
	response button sensitivity proactively.

2009-08-28  Mike Kestner <mkestner@novell.com>

	* StartPage.cs: a little banner gradient tweaking.

2009-08-28  Mike Kestner <mkestner@novell.com>

	* History.cs: basic history tracking xml serialized class.