@@ -1,3 +1,8 @@
+2010-01-21  Mike Kestner <mkestner@novell.com>
+
+	* Emveepee.Decoding/MappingBlock.cs: switch some info types from
+	value to reference and improve encapsulation.
+
 2009-11-16  Mike Kestner <mkestner@novell.com>
 
 	* configure.in: back off requirement to 2.6.
